[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://props/coin.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://1vxl8pay628q" path="res://props/coin.png" id="2"]

[sub_resource type="CircleShape2D" id="1"]
radius = 24.0
script = null

[sub_resource type="CircleShape2D" id="2"]
radius = 320.0
script = null

[node name="coin" type="Node2D"]
script = ExtResource("1")
friction = 2.0

[node name="detector" type="Area2D" parent="."]
collision_layer = 8

[node name="shape" type="CollisionShape2D" parent="detector"]
shape = SubResource("1")

[node name="large_detector" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 8

[node name="shape" type="CollisionShape2D" parent="large_detector"]
shape = SubResource("2")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2")

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_entered" from="large_detector" to="." method="_on_large_detector_body_entered"]
